# insigniames

./: .gitignore  Cargo.toml  backup.js  mes.service  z.py
.github/workflows/: main.yml
src/: lib.rs
src/backend/: app.rs  mod.rs  routes.rs  templates.rs
src/backend/api/: mod.rs  sap.rs  scrap.rs
src/backend/handlers/: downtime.rs  ink_usage.rs  job.rs  lookup.rs  machine.rs  material.rs  mod.rs  process_order.rs  roll.rs  sap.rs  scrap.rs  section.rs  solvent_usage.rs  user.rs
src/backend/middlewares/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/backend/models/: downtime.rs  id.rs  ink_usage.rs  job.rs  lookup.rs  machine.rs  material.rs  (+8 more)
src/desktop/: app.rs  routes.rs
src/hardware/: app.rs  routes.rs
src/manager/: config.rs  db.rs  helper.rs  mod.rs
src/sap/: materials.rs  mav.rs  mins.rs  mod.rs  pso.rs  rolls.rs  scrap.rs
static/scripts/: consumables.js  downtime.js  home.js  input-rolls.js  jobs.js  lookups.js  machines.js  materials.js  production.js  roles.js  rolls.js  scrap.js  script.js  sections.js  settings.js  signin.js  users.js
static/styles/: settings.css  signin.css  styles.css  theme.css  users.css
templates/: consumable.html  downtime.html  home.html  input-rolls.html  jobs.html  lookup.html  machine.html  material.html  output-rolls.html  production.html  roles.html  rolls.html  scrap.html  section.html  settings.html  signin.html  users.html  weigh.html
templates/admin/: lookup.html  machine.html  material.html  roles.html  section.html  users.html
templates/report/: consumable.html  downtime.html  scrap.html
(+31 files in other folders)
