[package]
name = "insignia_mes"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-identity = "0.9.0"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = { version = "4.11.0", features = ["cookies"] }
aes = "0.7.5"
anyhow = "1.0.99"
askama = "0.14.0"
base-x = "0.2.11"
block-modes = "0.8"
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = "0.29.0"
dotenv = "0.15.0"
figlet-rs = "0.1.5"
filters = "0.4.0"
futures = "0.3.31"
futures-util = "0.3.31"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rusttype = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.225"
serde_json = "1.0.145"
serialport = "4.0"
sha2 = "0.10.9"
tiberius = { version = "0.12.3", default-features = false, features = ["tokio", "rustls"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
webbrowser = "1.0.5"
tempfile = "3.10.1"
lopdf = "0.32.0"
base64 = "0.22.1"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
rand = { version = "0.9.2", features = ["std", "alloc"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
actix-cors = "0.7.1"
regex = "1.11.3"
once_cell = "1.21.3"
windows-service = "0.8.0"
winapi = { version = "0.3", features = ["winuser", "shellapi", "securitybaseapi", "processthreadsapi", "handleapi", "winnt"] }
actix-multipart = "0.7.2"
web-view = "0.7.3"
actix-rt = "2.11.0"
